--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/debug
 target/deploy
 target/release
 target/sbf-solana-solana
-target/types/.rustc_info.json
+target/.rustc_info.json
 **/*.rs.bk
 node_modules
 test-ledger
