update Anchor.toml for devnet deployment

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,11 +7,14 @@ skip-lint = false
 [programs.localnet]
 ss_back = "2tMDoY5s3xnvZ8ma4HvvzhPqwK9fZCT2EJD6VT2RX5t5"
 
+[programs.devnet]
+ss_back = "2tMDoY5s3xnvZ8ma4HvvzhPqwK9fZCT2EJD6VT2RX5t5"
+
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
