update shuffle function

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -14,7 +14,7 @@ ss_back = "2tMDoY5s3xnvZ8ma4HvvzhPqwK9fZCT2EJD6VT2RX5t5"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Devnet"
+cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
